docs: le site De Mr Farine

--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Monsieur Farine - Artisan Boulanger à Lille</title>
+</head>
+<body>
+    <header>
+        <h1>Monsieur Farine - Artisan Boulanger à Lille</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Présentation</h2>
+            <p>Je suis artisan boulanger depuis 5 ans. J'ai l'amour du pain et de la qualité qui m'a été transmis par mes parents. Chez moi, chaque pain est fait avec passion et savoir-faire.</p>
+        </section>
+
+        <section>
+            <h2>Informations</h2>
+            <p><strong>Nom :</strong> Monsieur Farine</p>
+            <p><strong>Adresse :</strong> 25 rue baguette, 59000 Lille</p>
+        </section>
+
+        <section>
+            <h2>Photos</h2>
+            <figure>
+                <img src="boulanger.jpg" alt="Photo de Monsieur Farine">
+                <figcaption>Monsieur Farine, votre artisan boulanger.</figcaption>
+            </figure>
+            <figure>
+               <figcaption>La façade de notre boulangerie à Lille.</figcaption>
+                <img src="vitrine.jpg" alt="Photo de la vitrine de la boulangerie">
+            </figure>
+        </section>
+
+        <section>
+            <h2>Contact</h2>
+            <p><a href="mailto:contact@monsieur-farine.com">Me contacter</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Monsieur Farine - Tous droits réservés.</p>
+    </footer>
+</body>
 </html>
